# TransformersPlayground

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/: data_loader.py  embeddings.py
src/tokenizer/: tokenizer.py
tests/: test_dataloader.py  test_embeddings.py  test_tokenizer.py
